--- a/index.html
+++ b/index.html
@@ -4,14 +4,68 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Treact</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-    </div>
+    <section id="nav">
+      <nav>
+        <div class="container">
+          <div class="row">
+            <div class="logo__wrapper">
+              <figure>
+                <img class="logo__img" src="./assets/Logo.png" alt="logo" />
+              </figure>
+              <p class="logo">Treact</p>
+            </div>
+            <div class="links">
+              <div class="link__lower">
+                <a href=""><li class="link">About</li></a>
+                <a href=""><li class="link">Blog</li></a>
+                <a href=""><li class="link">Pricing</li></a>
+                <a href=""><li class="link">Contact Us</li></a>
+                <a href=""><li class="link__primary">Login</li></a>
+              </div>
+              <a href=""><li class="sign__up--button">Sign Up</li></a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <main>
+      <section class="intro">
+        <div class="intro__container">
+          <div class="intro__row">
+            <div class="intro__text--wrapper">
+              <h1 class="intro__header">
+                Beautiful React Templates
+                <span class="purple__text">for you.</span>
+              </h1>
+              <p class="intro__para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis labore minima officiis repellendus fugiat quasi.
+                Blanditiis bodshn qurifte.
+              </p>
+
+              <div class="email__wrapper">
+                <input class="intro__input"
+                  type="email"
+                  name=""
+                  id=""
+                  placeholder="Your E-mail Address"
+                />
+                <button class="intro__button">Get Started</button>
+              </div>
+              <figure class="sponser__wrapper">
+                <img src="./assets/sponcers.png" alt="">
+              </figure>
+            </div>
+            <figure class="intro__img--wrapper">
+              <img src="./assets/Pic 1.png" alt="" />
+            </figure>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
