--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Treact</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"  />
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -33,7 +34,7 @@
       </nav>
     </section>
     <main>
-      <section class="intro">
+      <section id="intro">
         <div class="intro__container">
           <div class="intro__row">
             <div class="intro__text--wrapper">
@@ -48,7 +49,8 @@
               </p>
 
               <div class="email__wrapper">
-                <input class="intro__input"
+                <input
+                  class="intro__input"
                   type="email"
                   name=""
                   id=""
@@ -57,12 +59,96 @@
                 <button class="intro__button">Get Started</button>
               </div>
               <figure class="sponser__wrapper">
-                <img src="./assets/sponcers.png" alt="">
+                <img src="./assets/sponcers.png" alt="" />
               </figure>
             </div>
             <figure class="intro__img--wrapper">
               <img src="./assets/Pic 1.png" alt="" />
             </figure>
+          </div>
+        </div>
+      </section>
+      <section id="features">
+        <div class="features__container">
+          <div class="features__row">
+            <p class="purple__text features__subheader">FEATURES</p>
+            <h1 class="features__header features__header--color">
+              We have Amazing
+              <span class="purple__text features__header">Service.</span>
+            </h1>
+            <p class="features__para">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Provident unde beatae ab
+              repellendus perferendis debitis illo!
+            </p>
+            <div class="features__wrapper">
+              <div class="feature">
+                <figure>
+                  <i class="fa fa-shield feature__img"></i>
+                </figure>
+                <div class="feature__text">
+                  <h2 class="feature__name"> Secure</h2>
+                  <p class="feature__para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit?
+                  </p>
+                </div>
+              </div>
+              <div class="feature">
+                <figure>
+                  <i class="fa fa-headset feature__img"></i>
+                </figure>
+                <div class="feature__text">
+                  <h2 class="feature__name"> 24/7 Support</h2>
+                  <p class="feature__para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elite?
+                  </p>
+                </div>
+              </div>
+              <div class="feature">
+                <figure>
+                  <i class="fa fa-sliders feature__img"></i>
+                </figure>
+                <div class="feature__text">
+                  <h2 class="feature__name"> Customizable</h2>
+                  <p class="feature__para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit?
+                  </p>
+                </div>
+              </div>
+              <div class="feature">
+                <figure>
+                  <i class="fa fa-thumbs-up feature__img"></i>
+                </figure>
+                <div class="feature__text">
+                  <h2 class="feature__name"> Reliable</h2>
+                  <p class="feature__para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit?
+                  </p>
+                </div>
+              </div>
+              <div class="feature">
+                <figure>
+                  <i class="fa fa-bolt feature__img"></i>
+                </figure>
+                <div class="feature__text">
+                  <h2 class="feature__name"> Fast</h2>
+                  <p class="feature__para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit?
+                  </p>
+                </div>
+              </div>
+              <div class="feature">
+                <figure>
+                  <i class="fa fa-heart feature__img"></i>
+                </figure>
+                <div class="feature__text">
+                  <h2 class="feature__name"> Easy</h2>
+                  <p class="feature__para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elite?
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
