--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Treact</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"  />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -43,9 +46,8 @@
                 <span class="purple__text">for you.</span>
               </h1>
               <p class="intro__para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis labore minima officiis repellendus fugiat quasi.
-                Blanditiis bodshn qurifte.
+                Our templates are easy to setup, understand and customize. Fully
+                modular components with a variety of pages and components.
               </p>
 
               <div class="email__wrapper">
@@ -78,8 +80,7 @@
             </h1>
             <p class="features__para">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Provident unde beatae ab
-              repellendus perferendis debitis illo!
+              Provident unde beatae ab repellendus perferendis debitis illo!
             </p>
             <div class="features__wrapper">
               <div class="feature">
@@ -87,7 +88,7 @@
                   <i class="fa fa-shield feature__img"></i>
                 </figure>
                 <div class="feature__text">
-                  <h2 class="feature__name"> Secure</h2>
+                  <h2 class="feature__name">Secure</h2>
                   <p class="feature__para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit?
                   </p>
@@ -98,7 +99,7 @@
                   <i class="fa fa-headset feature__img"></i>
                 </figure>
                 <div class="feature__text">
-                  <h2 class="feature__name"> 24/7 Support</h2>
+                  <h2 class="feature__name">24/7 Support</h2>
                   <p class="feature__para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elite?
                   </p>
@@ -109,7 +110,7 @@
                   <i class="fa fa-sliders feature__img"></i>
                 </figure>
                 <div class="feature__text">
-                  <h2 class="feature__name"> Customizable</h2>
+                  <h2 class="feature__name">Customizable</h2>
                   <p class="feature__para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit?
                   </p>
@@ -120,7 +121,7 @@
                   <i class="fa fa-thumbs-up feature__img"></i>
                 </figure>
                 <div class="feature__text">
-                  <h2 class="feature__name"> Reliable</h2>
+                  <h2 class="feature__name">Reliable</h2>
                   <p class="feature__para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit?
                   </p>
@@ -131,7 +132,7 @@
                   <i class="fa fa-bolt feature__img"></i>
                 </figure>
                 <div class="feature__text">
-                  <h2 class="feature__name"> Fast</h2>
+                  <h2 class="feature__name">Fast</h2>
                   <p class="feature__para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit?
                   </p>
@@ -142,12 +143,72 @@
                   <i class="fa fa-heart feature__img"></i>
                 </figure>
                 <div class="feature__text">
-                  <h2 class="feature__name"> Easy</h2>
+                  <h2 class="feature__name">Easy</h2>
                   <p class="feature__para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elite?
                   </p>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="quality">
+        <div class="quality__container">
+          <div class="quality__row">
+            <div class="quality__text--wrapper">
+              <h2 class="purple__text quality__subheader">QUALITY WORK</h2>
+              <h1 class="quality__header">
+                Designed & Developed by
+                <span class="purple__text">Professionals.</span>
+              </h1>
+              <p class="quality__para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+                accusantium similique totam veritatis, suscipit beatae doloribus
+                qui voluptate nihil rem sed, laboriosam deleniti tempora sunt!
+                Saepe, distinctio quo, minus aliquam at enim odit numquam porro
+                expedita!
+              </p>
+              <button class="quality__button">Learn More</button>
+            </div>
+            <figure class="quality__img--wrapper">
+              <img class="quality__img" src="./assets/pic 2.png" alt="" />
+            </figure>
+          </div>
+        </div>
+      </section>
+      <section id="steps">
+        <div class="steps__container">
+          <div class="steps__row">
+            <figure class="steps__img--wrapper"><img class="steps__img" src="./assets/laptop.png" alt=""></figure>
+            <div class="steps__text--wrapper">
+              <h2 class="purple__text steps__subheader">STEPS</h2>
+              <h1 class="steps__header">Easy to <span class="purple__text">Get Started.</span></h1>
+              <ul class="steps__wrapper">
+                <li class="step">
+                  <div class="step__number">01</div>
+                  <div class="step__text">
+                    <div class="step__name"> Register</div>
+                    <p class="step__para">Create an account with us using Google or Facebook.</p>
+                  </div>
+                </li>
+                <li class="step">
+                  <div class="step__number">02</div>
+                  <div class="step__text">
+                    <div class="step__name"> Download</div>
+                    <p class="step__para">Browse and Download the template that you like from the marketplace.
+
+                    </p>
+                  </div>
+                </li>
+                <li class="step">
+                  <div class="step__number">03</div>
+                  <div class="step__text">
+                    <div class="step__name">Run</div>
+                    <p class="step__para">Follow the instructions to setup and customize the template to your needs.</p>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
