--- a/index.html
+++ b/index.html
@@ -180,24 +180,31 @@
       <section id="steps">
         <div class="steps__container">
           <div class="steps__row">
-            <figure class="steps__img--wrapper"><img class="steps__img" src="./assets/laptop.png" alt=""></figure>
+            <figure class="steps__img--wrapper">
+              <img class="steps__img" src="./assets/laptop.png" alt="" />
+            </figure>
             <div class="steps__text--wrapper">
               <h2 class="purple__text steps__subheader">STEPS</h2>
-              <h1 class="steps__header">Easy to <span class="purple__text">Get Started.</span></h1>
+              <h1 class="steps__header">
+                Easy to <span class="purple__text">Get Started.</span>
+              </h1>
               <ul class="steps__wrapper">
                 <li class="step">
                   <div class="step__number">01</div>
                   <div class="step__text">
-                    <div class="step__name"> Register</div>
-                    <p class="step__para">Create an account with us using Google or Facebook.</p>
+                    <div class="step__name">Register</div>
+                    <p class="step__para">
+                      Create an account with us using Google or Facebook.
+                    </p>
                   </div>
                 </li>
                 <li class="step">
                   <div class="step__number">02</div>
                   <div class="step__text">
-                    <div class="step__name"> Download</div>
-                    <p class="step__para">Browse and Download the template that you like from the marketplace.
-
+                    <div class="step__name">Download</div>
+                    <p class="step__para">
+                      Browse and Download the template that you like from the
+                      marketplace.
                     </p>
                   </div>
                 </li>
@@ -205,10 +212,134 @@
                   <div class="step__number">03</div>
                   <div class="step__text">
                     <div class="step__name">Run</div>
-                    <p class="step__para">Follow the instructions to setup and customize the template to your needs.</p>
+                    <p class="step__para">
+                      Follow the instructions to setup and customize the
+                      template to your needs.
+                    </p>
                   </div>
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="values">
+        <div class="values__container">
+          <div class="values__row">
+            <div class="values__text--wrapper">
+              <h2 class="values__subheader">VALUES</h2>
+              <div class="values__header">
+                We Always Abide by Our
+                <span class="purple__text">Principles.</span>
+              </div>
+              <p class="values__para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Veritatis iste quia, dolorum commodi ea eos repudiandae
+                excepturi sequi nemo hic molestiae molestias eum numquam
+                corrupti veniam. Facilis amet ut nihil ipsa, recusandae eius
+                quibusdam sed inventore!
+              </p>
+              <div class="values__points--wrapper">
+                <div class="values__point">
+                  <div class="point__header">
+                    <i class="fa fa-dollar-sign point__img"></i>
+                    <div class="point__header--text">Affordable</div>
+                  </div>
+                  <p class="point__para">
+                    We promise to offer you the best rate we can - at par with
+                    the industry standard.
+                  </p>
+                </div>
+                <div class="values__point">
+                  <div class="point__header">
+                    <i
+                      class="fa fa-light fa-suitcase point__img point__img--two"
+                    ></i>
+                    <div class="point__header--text">Professionalism</div>
+                  </div>
+                  <p class="point__para">
+                    We assure you that our templates are designed and created by
+                    professional designers.
+                  </p>
+                </div>
+              </div>
+              <button class="values__button">Learn More</button>
+            </div>
+            <figure class="values__img--wrapper">
+              <img src="./assets/pic 3.svg" alt="" class="values__img" />
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section id="plans">
+        <div class="plans__container">
+          <div class="plans__row">
+            <div class="plans__text--wrapper">
+              <h2 class="plans__subheader">PRICING</h2>
+              <h1 class="plans__header">
+                Reasonable & Flexibles <span class="purple__text">Plans.</span>
+              </h1>
+              <div class="plans__para">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </div>
+            </div>
+            <div class="plans__wrapper">
+              <div class="plan">
+                <div class="plan__hightlight"></div>
+                <div class="plan__header">
+                  <div class="plan__name">PERSONAL</div>
+                  <div class="plan__price">$17.99</div>
+                  <div class="plan__duration">MONTHLY</div>
+                </div>
+                <div class="plan__features">
+                  <div class="plan__main--feature">For Individuals</div>
+                  <div class="plan__feature">30 Templates</div>
+                  <div class="plan__feature">7 Landing Pages</div>
+                  <div class="plan__feature">12 Internal Pages</div>
+                  <div class="plan__feature">Basic Assistance</div>
+                </div>
+                <div class="plan__button--wrapper">
+                  <div class="plan1__button">BUY NOW</div>
+                </div>
+              </div>
+              <div class="plan">
+                <div class="plan2__hightlight"></div>
+                <div class="plan__header">
+                  <div class="plan__name">BUSINESS</div>
+                  <div class="plan__price">$37.99</div>
+                  <div class="plan__duration">MONTHLY</div>
+                </div>
+                <div class="plan__features">
+                  <div class="plan__main--feature">For Small Businesses</div>
+                  <div class="plan__feature">60 Templates</div>
+                  <div class="plan__feature">15 Landing Pages</div>
+                  <div class="plan__feature">22 Internal Pages</div>
+                  <div class="plan__feature">Priority Assistance</div>
+                </div>
+                <div class="plan__button--wrapper">
+                  <div class="plan2__button">BUY NOW</div>
+                </div>
+              </div>
+              <div class="plan">
+                <div class="plan__hightlight3"></div>
+                <div class="plan__header">
+                  <div class="plan__name">ENTERPRISE</div>
+                  <div class="plan__price">$57.99</div>
+                  <div class="plan__duration">MONTHLY</div>
+                </div>
+                <div class="plan__features">
+                  <div class="plan__main--feature">For Large Companies</div>
+                  <div class="plan__feature">90 Templates</div>
+                  <div class="plan__feature">27 Landing Pages</div>
+                  <div class="plan__feature">37 Internal Pages</div>
+                  <div class="plan__feature">Personal Assistance</div>
+                </div>
+                <div class="plan__button--wrapper">
+                  <div class="plan3__button">BUY NOW</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
