--- a/index.html
+++ b/index.html
@@ -344,6 +344,129 @@
           </div>
         </div>
       </section>
+      <section id="testimonials">
+        <div class="test__container">
+          <div class="test__row">
+            <figure class="test__img--wrapper">
+              <img src="./assets/pic 4.svg" alt="" class="test__img" />
+            </figure>
+            <div class="test__text--wrapper">
+              <div class="test__subheader">TESTIMONIALS</div>
+              <h1 class="test__header">
+                Our Clients <span class="purple__text">Love Us.</span>
+              </h1>
+              <p class="test__para">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua enim
+                ad minim veniam.
+              </p>
+              <div class="test__review">
+                <div class="review__rating">
+                  <div class="fa fa-star review__star"></div>
+                  <div class="fa fa-star review__star"></div>
+                  <div class="fa fa-star review__star"></div>
+                  <div class="fa fa-star review__star"></div>
+                  <div class="fa fa-star review__star"></div>
+                </div>
+                <div class="review__header">Amazing User Experience</div>
+                <p class="review__para">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
+                  provident expedita repudiandae perferendis harum doloribus,
+                  ipsam eaque accusantium ad accusamus eius explicabo quasi!
+                  Velit voluptatibus, repudiandae beatae omnis recusandae
+                  laborum suscipit amet facere aliquid nesciunt ratione magnam
+                  voluptatum repellendus adipisci.
+                </p>
+                <div class="review__person">
+                  <div class="person">
+                    <img
+                      src="./assets/pic-person.avif"
+                      alt=""
+                      class="review__img"
+                    />
+                    <div class="person__text">
+                      <div class="person__name">Charlotte Hale</div>
+                      <div class="person__role">Director, Delos Inc.</div>
+                    </div>
+                  </div>
+                  <div class="review__buttons">
+                    <div class="fa fa-arrow-left left__button"></div>
+                    <div class="divider"></div>
+                    <div class="fa fa-arrow-right right__button"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="faq">
+        <div class="faq__container">
+          <div class="faq__row">
+            <div class="faq__text--wrapper">
+            <h2 class="faq__subheader">FAQS</h2>
+            <h1 class="faq__header">
+              You have <span class="purple__text">Questions?</span>
+            </h1>
+            <p class="faq__para">
+              And we have got answers to all of them. Lorem ipsum dolor sit
+              amet, consectetur adipiscing elit.
+            </p>
+          </div>
+            <div class="faq__questions--wrapper">
+              <div class="question__wrapper">
+              <div class="faq__question">
+                <div class="faq__question--text">
+                  Are all the templates easily customizable?
+                </div>
+                <div class="fa fa-angle-down faq__question--img"></div>
+              </div>
+            </div>
+            <div class="question__wrapper">
+              <div class="faq__question">
+                <div class="faq__question--text">
+                  How long do you usally support a standalone template for?
+                </div>
+                <div class="fa fa-angle-down faq__question--img"></div>
+              </div>
+            </div>
+            <div class="question__wrapper">
+              <div class="faq__question">
+                <div class="faq__question--text">
+                  What kind of payment methods do you accept?
+                </div>
+                <div class="fa fa-angle-down faq__question--img"></div>
+              </div>
+            </div>
+            <div class="question__wrapper">
+              <div class="faq__question">
+                <div class="faq__question--text">
+                  Is there a subscription serivce to get the latest templates?
+                </div>
+                <div class="fa fa-angle-down faq__question--img"></div>
+              </div>
+            </div>
+            <div class="question__wrapper">
+              <div class="faq__question">
+                <div class="faq__question--text">
+                  Are the templates compatible with the React?
+                </div>
+                <div class="fa fa-angle-down faq__question--img"></div>
+              </div>
+            </div>
+            <div class="question__wrapper">
+              <div class="faq__question">
+                <div class="faq__question--text">
+                  Do you really support Internet Explorer 11?
+                </div>
+                <div class="fa fa-angle-down faq__question--img"></div>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
