--- a/index.html
+++ b/index.html
@@ -405,68 +405,143 @@
         <div class="faq__container">
           <div class="faq__row">
             <div class="faq__text--wrapper">
-            <h2 class="faq__subheader">FAQS</h2>
-            <h1 class="faq__header">
-              You have <span class="purple__text">Questions?</span>
-            </h1>
-            <p class="faq__para">
-              And we have got answers to all of them. Lorem ipsum dolor sit
-              amet, consectetur adipiscing elit.
-            </p>
-          </div>
+              <h2 class="faq__subheader">FAQS</h2>
+              <h1 class="faq__header">
+                You have <span class="purple__text">Questions?</span>
+              </h1>
+              <p class="faq__para">
+                And we have got answers to all of them. Lorem ipsum dolor sit
+                amet, consectetur adipiscing elit.
+              </p>
+            </div>
             <div class="faq__questions--wrapper">
               <div class="question__wrapper">
-              <div class="faq__question">
-                <div class="faq__question--text">
-                  Are all the templates easily customizable?
+                <div class="faq__question">
+                  <div class="faq__question--text">
+                    Are all the templates easily customizable?
+                  </div>
+                  <div class="fa fa-angle-down faq__question--img"></div>
                 </div>
-                <div class="fa fa-angle-down faq__question--img"></div>
               </div>
-            </div>
-            <div class="question__wrapper">
-              <div class="faq__question">
-                <div class="faq__question--text">
-                  How long do you usally support a standalone template for?
+              <div class="question__wrapper">
+                <div class="faq__question">
+                  <div class="faq__question--text">
+                    How long do you usally support a standalone template for?
+                  </div>
+                  <div class="fa fa-angle-down faq__question--img"></div>
                 </div>
-                <div class="fa fa-angle-down faq__question--img"></div>
               </div>
-            </div>
-            <div class="question__wrapper">
-              <div class="faq__question">
-                <div class="faq__question--text">
-                  What kind of payment methods do you accept?
+              <div class="question__wrapper">
+                <div class="faq__question">
+                  <div class="faq__question--text">
+                    What kind of payment methods do you accept?
+                  </div>
+                  <div class="fa fa-angle-down faq__question--img"></div>
                 </div>
-                <div class="fa fa-angle-down faq__question--img"></div>
               </div>
-            </div>
-            <div class="question__wrapper">
-              <div class="faq__question">
-                <div class="faq__question--text">
-                  Is there a subscription serivce to get the latest templates?
+              <div class="question__wrapper">
+                <div class="faq__question">
+                  <div class="faq__question--text">
+                    Is there a subscription serivce to get the latest templates?
+                  </div>
+                  <div class="fa fa-angle-down faq__question--img"></div>
                 </div>
-                <div class="fa fa-angle-down faq__question--img"></div>
               </div>
-            </div>
-            <div class="question__wrapper">
-              <div class="faq__question">
-                <div class="faq__question--text">
-                  Are the templates compatible with the React?
+              <div class="question__wrapper">
+                <div class="faq__question">
+                  <div class="faq__question--text">
+                    Are the templates compatible with the React?
+                  </div>
+                  <div class="fa fa-angle-down faq__question--img"></div>
                 </div>
-                <div class="fa fa-angle-down faq__question--img"></div>
               </div>
-            </div>
-            <div class="question__wrapper">
-              <div class="faq__question">
-                <div class="faq__question--text">
-                  Do you really support Internet Explorer 11?
+              <div class="question__wrapper">
+                <div class="faq__question">
+                  <div class="faq__question--text">
+                    Do you really support Internet Explorer 11?
+                  </div>
+                  <div class="fa fa-angle-down faq__question--img"></div>
                 </div>
-                <div class="fa fa-angle-down faq__question--img"></div>
               </div>
-            </div>
             </div>
           </div>
         </div>
       </section>
+      <section id="started">
+        <div class="start__container">
+          <div class="start__row">
+            <div class="start__background">
+            <div class="start__content--wrapper">
+              <div class="start__text">
+                Developers all over the world are happily using Treact.
+              </div>
+              <div class="start__buttons">
+                <button class="start">Get Started</button>
+                <button class="contact">Contact Us</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="footer__container">
+        <div class="footer__row">
+          <div class="footer__background">
+            <div class="footer__list">
+              <div class="footer__list--header">MAIN</div>
+              <div class="footer__list--item">Blog</div>
+              <div class="footer__list--item">FAQs</div>
+              <div class="footer__list--item">Support</div>
+              <div class="footer__list--item">About Us</div>
+            </div>
+            <div class="footer__list">
+              <div class="footer__list--header">PRODUCT</div>
+              <div class="footer__list--item">Log In</div>
+              <div class="footer__list--item">Personal</div>
+              <div class="footer__list--item">Business</div>
+              <div class="footer__list--item">Team</div>
+            </div>
+            <div class="footer__list">
+              <div class="footer__list--header">PRESS</div>
+              <div class="footer__list--item">Logos</div>
+              <div class="footer__list--item">Events</div>
+              <div class="footer__list--item">Stories</div>
+              <div class="footer__list--item">Office</div>
+            </div>
+            <div class="footer__list">
+              <div class="footer__list--header">TEAM</div>
+              <div class="footer__list--item">Career</div>
+              <div class="footer__list--item">Founders</div>
+              <div class="footer__list--item">Culture</div>
+              <div class="footer__list--item">Onboarding</div>
+            </div>
+            <div class="footer__list">
+              <div class="footer__list--header">LEGAL</div>
+              <div class="footer__list--item">GDPR</div>
+              <div class="footer__list--item">Privacy Policy</div>
+              <div class="footer__list--item">Terms of Service</div>
+              <div class="footer__list--item">Disclaimer</div>
+            </div>
+          </div>
+            <div class="footer__divider"></div>
+            <div class="footer__copyright">
+              <figure class="footer__logo--wrapper">
+                <img src="./assets/footer_logo.svg" alt="" class="footer__logo">
+                <p class="footer__logo--text">Treact Inc.</p>
+              </figure>
+              <div class="footer__trademark">© 2018 Treact Inc. All Rights Reserved.</div>
+              <div class="footer__socials">
+                <div class="fa-brands fa-twitter social"></div>
+                <div class="fa-brands fa-facebook-f social__f"></div>
+                <div class="fa-brands fa-youtube social"></div>
+              </div>
+            </div>
+
+          
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
